<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.edvaldotsi.fastfood.CadastroClienteActivity"
    android:orientation="vertical">

    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Theme.FastFood.Activity">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                app:met_floatingLabel="normal"
                app:met_helperText=""
                android:hint="@string/lb_nome"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:met_floatingLabel="normal"
                app:met_helperText=""
                android:hint="@string/lb_email"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:met_floatingLabel="normal"
                app:met_helperTextColor="#d9d917"
                app:met_helperText=""
                android:hint="@string/lb_senha"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lb_contato"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:met_floatingLabel="normal"
                app:met_helperText=""
                android:hint="@string/lb_telefone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lb_endereco"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_logradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress|textCapSentences"
                app:met_floatingLabel="normal"
                app:met_helperText=""
                android:hint="@string/lb_logradouro"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                app:met_helperText=""
                android:hint="@string/lb_numero"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ed_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapSentences"
                app:met_floatingLabel="normal"
                app:met_helperText=""
                android:hint="@string/lb_bairro"/>

            <Spinner
                android:id="@+id/sp_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
