<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.edvaldotsi.fastfood.fragment.TabPagamentoFragment"
    android:padding="14dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_cartao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:text="@string/lb_cartao" />

    <Button
        android:id="@+id/bt_dinheiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_bottom"
        android:text="@string/lb_dinheiro"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ed_troco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:met_floatingLabel="normal"
        app:met_helperTextColor="#d9d917"
        app:met_helperText="Precisa de troco para quantos reais?"
        android:visibility="gone"
        android:hint="@string/lb_troco"/>

</LinearLayout>
