<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Theme.FastFood.Activity">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_bottom"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            app:met_helperText=""
            android:hint="@string/lb_email" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_bottom"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            app:met_helperText=""
            android:hint="@string/lb_senha" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_entrar"
            android:onClick="btnLoginAction"/>

    </LinearLayout>

</LinearLayout>
