<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.edvaldotsi.fastfood.EnderecoActivity"
    android:orientation="vertical">

    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/Theme.FastFood.Activity">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_logradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            app:met_floatingLabel="normal"
            app:met_helperText=""
            android:hint="@string/lb_logradouro"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            app:met_floatingLabel="normal"
            app:met_helperText=""
            android:hint="@string/lb_numero"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:met_floatingLabel="normal"
            app:met_helperText=""
            android:hint="@string/lb_bairro"/>

    </LinearLayout>

</LinearLayout>
