<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.edvaldotsi.fastfood.fragment.TabProdutoFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/im_produto"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:contentDescription="@string/lb_imagem_produto"
        android:src="@drawable/sem_imagem"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_nome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#333333"/>

            <TextView
                android:id="@+id/tv_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#1f9305"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_del"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_del"
                android:contentDescription="@string/lb_btn_del_item"
                android:background="@drawable/round_button_danger"/>

            <TextView
                android:id="@+id/tv_quantidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#333333"/>

            <ImageButton
                android:id="@+id/bt_add"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/lb_btn_add_item"
                android:background="@drawable/round_button_success"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
